<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/bbc"
            android:title="@string/bbc"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/aljazeera"
            android:title="@string/aljazeera"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/cnn"
            android:title="@string/cnn"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/foxxnewsFragment"
            android:icon="@drawable/cnn"
            android:title="@string/foxxnews"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/skynewsFragment"
            android:icon="@drawable/aljazeera"
            android:title="@string/skynews"
            android:menuCategory="secondary"/>

        <item android:title="Upcoming Events"
            android:menuCategory="secondary">

            <menu>
                <item
                    android:id="@+id/ny"
                    android:icon="@drawable/ny"
                    android:title="@string/new_york_times"
                    android:menuCategory="secondary"
                    />
            </menu>
        </item>
    </group>
</menu>